button margin padding collapse fix

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -1,6 +1,8 @@
 @import "../variables";
 
 .main {
+    display: inline-block;
+
     text-transform: uppercase;
     background-color: $color-primary;
     border: 1px solid $color-primary;
